# esp-cli

./: CMakeLists.txt  cli.c  component.mk  espcliFilePaths.cmake
commands/: system.c  system.h
include/: esp_cli.h
